--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = "20"> <!--To get the Pic to the left and my info to the right, to make it look neat I used a table element(creates 2 columns)-->
     <tr>
-      <td><img src = "images/panda.png" alt = "They say I look like a panda" /></td>
+      <td><img src = "panda.png" alt = "They say I look like a panda" /></td>
       <td><h1>Harini Abeysirigunawardena</h1>
       <p><em> Stupid yet Smarties<strong><a href="https://en.wikipedia.org/wiki/Welsh_Corgi"> like a Corgi</a></strong></p>
       <p>Hi!. My name is Harini Abeysirigunawardena. I'm 21 years old. I'm currently a 1st year
