Updated index.html file

--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
 <head>
   <meta charset="utf-8">
   <title>Harini's Personal Site</title>
-</head>
+  <!--
+  <style>
+  body {
+    background-color:#C1EFFF;
+  }
 
+  hr{
+    border-style: none;
+    border-top-style: dotted;
+    border-color: #319DA0;
+    border-width: 8px;
+    height: 0px;
+    width:8%;
+  }
+</style> (Internal CSS(Changing the bg color of the body & the horizontal rule using the style tag inside the head tag)
+-->
+<link rel="stylesheet" href="css/styles.css" /> <!--link to External CSS Stylesheet(styles.css)-->
+</head>
 <body>
+<!--<body style = "background-color: #C1EFFF;"> Inline CSS(Changing the bg color using the style attribute inside the body tag)-->
   <table cellspacing = "20"> <!--To get the Pic to the left and my info to the right, to make it look neat I used a table element(creates 2 columns)-->
     <tr>
       <td><img src = "images/panda.png" alt = "They say I look like a panda" /></td>
       <td><h1>Harini Abeysirigunawardena</h1>
       <p><em> Stupid yet Smarties<strong><a href="https://en.wikipedia.org/wiki/Welsh_Corgi"> like a Corgi</a></strong></p>
-      <p>Hi!. My name is Harini Abeysirigunawardena. I'm 21 years old. I'm currently a 1st year
+      <p>Hi!. My name is Harini Abeysirigunawardena. I'm 21 years old. I'm currently a 2nd year
         udergraduate majoring in software engineering in the Informatics Institute of Technology. I'm
         a coding enthusiast as well as a adrenaline junkie who also happens to be a nerdy bookworm.</p></td>
     </tr>
@@ -31,7 +48,7 @@
   <hr />
 
   <h3>Work Experience</h3>
-  <table border="1"> <!--Create a border arount the table-->
+  <!--<table border="1"> Create a border arount the table
     <thead>
       <tr>
         <th>Dates</th>
@@ -48,7 +65,8 @@
     </tfoot>
   </table>
   <p>2022 - 2023 - Director of events at IEEE SB of IIT</p>
-  <hr />
+  <hr />-->
+  
   <table cellspacing="10"> <!--Table without border-->
     <tr>
       <td>2022 - 2023</td>
@@ -114,3 +132,4 @@
 </body>
 
 </html>
+
