--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   }
 </style> (Internal CSS(Changing the bg color of the body & the horizontal rule using the style tag inside the head tag)
 -->
-<link rel="stylesheet" href="css/styles.css" /> <!--link to External CSS Stylesheet(styles.css)-->
+<link rel="stylesheet" href="styles.css" /> <!--link to External CSS Stylesheet(styles.css)-->
 </head>
 <body>
 <!--<body style = "background-color: #C1EFFF;"> Inline CSS(Changing the bg color using the style attribute inside the body tag)-->
