--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Info</title>
+    <link rel="stylesheet" href="css/styles.css" /> <!--link to External CSS Stylesheet(styles.css)-->
   </head>
   <body>
     <h3>Contact me</h3>
