--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Info</title>
-    <link rel="stylesheet" href="styles.css" /> <!--link to External CSS Stylesheet(styles.css)-->
+    <link rel="stylesheet" href="css/styles.css" /> <!--link to External CSS Stylesheet(styles.css)-->
   </head>
   <body>
     <h3>Contact me</h3>
@@ -12,7 +12,7 @@
       <li>Email Address - ashinkaharini487@gmail.com</li>
       <li><a href="https://lk.linkedin.com">Connect with me on LinkedIn</a></li>
     </ul>
-
+    <hr/>
     <!--CREATING A CONTACT FORM-->
 
     <form class="" action="mailto:ashinkaharini487@gmail.com" method="post" enctype="text/plain"><!--Mailing the user inputs to my email address-->
