--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,13 @@
       <li>Email Address - ashinkaharini487@gmail.com</li>
       <li><a href="https://lk.linkedin.com">Connect with me on LinkedIn</a></li>
     </ul>
-    <hr/>
+    <hr />
+
     <!--CREATING A CONTACT FORM-->
 
     <form class="" action="mailto:ashinkaharini487@gmail.com" method="post" enctype="text/plain"><!--Mailing the user inputs to my email address-->
       <label>Enter your name: </label>
-      <input type="text" name="yourName" value="">
+      <input type="text" name="yourName" value=""><!--input tag is self closing-->
       <input type="color" name="" value=""><br /><br /> <!--To create a color-picker-->
       <label>Enter your password: </label>
       <input type="password" name="yourPassword" value=""><br /><br /><!--To create a password input-->
@@ -25,8 +26,11 @@
       <input type="email" name="yourEmail" value=""><br /><!--To create a email input-->
       <label>Do you want to sign up to the email list?</label>
       <input type="checkbox" name="" value=""><br /><br /><!--To create a small checkbox-->
+      <label>Please enter the Date and Time of your submission:</label>
+      <input type="datetime-local" name="theDateandTime" value=""><br/><br/><!--To set the date and time-->
       <label>Your Message: </label><br />
       <textarea name="yourMessage" rows="10" cols="30"></textarea><br /><br /><!--To create a text area-->
+      <input type = "file" name ="uploadedFile" value=""><!--To upload a file--><br /><br />
       <input type="submit" name="" > <!--To create a Submit button-->
 
     </form>
